--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
           <!-- </div> -->
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg);"></div>
+          	<div class="img" style="background-image: url(images/port_picture.jpg);"></div>
           </div>
         </div>
       </div>
