--- a/index.html
+++ b/index.html
@@ -801,9 +801,9 @@
           
           <!-- </div> -->
 
-          <!-- <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/port_picture.jpg);"></div>
-          </div> -->
+          <!-- <div class="col-md-6 d-flex"> -->
+          <!--	<div class="img" style="background-image: url(images/port_picture.jpg);"></div> -->
+         <!-- </div> -->
         </div>
       </div>
     </section>		
