--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			  				<h2>I'm a 
 								  <span
 								     class="txt-rotate"
-								     data-period="2000"
+								     data-period="1000"
 								     data-rotate='[ "Web Developer.", "Java Developer."]'></span>
 								</h2>
 							</div>
@@ -74,7 +74,7 @@
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex no-gutters">	
-    			<div class="col-md-6 col-lg-6 d-flex">
+    			<div class="col-md-6 col-sm-12 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
 	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/port_picture.jpg);">
